fetched atleast some results from brewery api

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             </ul>
         </div>
     </header>
+    <table id="container">
+
+    </div>
+    <script src="Scripts/index.js"></script>
 </body>
 </html>
