fetch and display data for search page in progresss

--- a/searchPage.html
+++ b/searchPage.html
@@ -16,5 +16,11 @@
             </ul>
         </div>
     </header>
+    <div id="search_container">
+
+    </div>
+    <input type="text" id="input">
+    <button id="search">Search</button>
+    <script src="Scripts/search.js"></script>
 </body>
 </html>
