partially done with the functionality of search page

--- a/searchPage.html
+++ b/searchPage.html
@@ -21,6 +21,7 @@
     </div>
     <input type="text" id="input">
     <button id="search">Search</button>
+    <div id="search-page-container"></div>
     <script src="Scripts/search.js"></script>
 </body>
 </html>
