individual brewery page fetching left

--- a/searchPage.html
+++ b/searchPage.html
@@ -19,7 +19,7 @@
     <div id="search_container">
 
     </div>
-    <input type="text" id="input">
+    <input type="text" id="input" placeholder="eg - cooper">
     <button id="search">Search</button>
     <div id="search-page-container"></div>
     <script src="Scripts/search.js"></script>
