added the functionality of individual  brewer page

--- a/individualBrewery.html
+++ b/individualBrewery.html
@@ -16,5 +16,9 @@
             </ul>
         </div>
     </header>
+    <div id="individual-page-container">
+        
+    </div>
+    <script src="Scripts/individualBrewery.js"></script>
 </body>
 </html>
